<resources>
    <string name="app_name">AlarmProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="word_alarm_notice">후에 주간 알람이 울립니다.</string>
    <string name="word_profile_image_add">프로필 사진 등록</string>
    <string name="word_user_name">사용자 이름 (닉네임)</string>
    <string name="word_gender">성별</string>
    <string name="word_connect_sns">SNS 연결</string>
    <string name="word_setting_complete">설정 완료</string>
    <string name="word_woman">여자</string>
    <string name="word_man">남자</string>
    <string name="word_input_limit_8">한글, 영문, 숫자 8자 이내 입력</string>
    <string name="word_alarm_add">알람 추가</string>

    <string name="activity_splash_tv_name">클릭째깍</string>

    <string name="layout_wakeup_btn_retry_alarm">다시 알림</string>
    <string name="layout_wakeup_daily_alarm">주간 알람</string>
    <string name="layout_wakeup_btn_stop_alarm">알람 중단</string>
    <string name="layout_wakeup_notice">진짜 일어나셨을때만 누르세요!!</string>

    <string name="alarm_sound">사운드</string>
</resources>