<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.signup.SignUpActivity">

    <data>

        <variable
            name="signUpActivity"
            type="com.example.alarmproject.view.signup.SignUpActivity" />

        <variable
            name="vm"
            type="com.example.alarmproject.view.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/ViewBasetheme">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="62dp"
            android:background="@drawable/ic_profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_profile_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bg_white_circle"
            android:padding="5dp"
            android:src="@drawable/ic_add_gray"
            app:layout_constraintBottom_toBottomOf="@id/iv_profile"
            app:layout_constraintRight_toRightOf="@id/iv_profile" />

        <TextView
            android:id="@+id/tv_profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/transparent"
            android:text="@string/word_profile_image_add"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profile" />

        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@color/transparent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_title">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/word_user_name"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/et_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_bg_white_round_4dp_06"
                android:onTextChanged="@{vm::onTextChanged}"
                android:text="@{vm.currentNickName}"
                android:hint="@string/word_input_limit_8"
                android:inputType="textPersonName"
                android:padding="14dp"
                android:textColorHint="@color/color_8D8D8D" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/transparent"
                android:text="@string/word_gender"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/transparent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_woman"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_gender_woman"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingVertical="11dp"
                    android:text="@string/word_woman"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <RadioButton
                    android:id="@+id/rb_man"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_gender_man"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingVertical="11dp"
                    android:text="@string/word_man"
                    android:textColor="@color/black"
                    android:textSize="16dp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/transparent"
                android:text="@string/word_connect_sns"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/transparent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tv_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_google_login_button"
                    android:background="@drawable/shape_bg_white_round_12dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_complete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="24dp"
            android:paddingVertical="12dp"
            android:text="@string/word_setting_complete"
            android:enabled="@{vm.isComplete()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>