<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_bg_linear_gradient_default"
        android:fitsSystemWindows="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/layout_wakeup_daily_alarm"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:clickable="false"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:stateListAnimator="@null"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:backgroundTint="@color/color_191919"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_retry_alarm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="+ 07:35" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_retry_alarm"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:stateListAnimator="@null"
            android:text="@string/layout_wakeup_btn_retry_alarm"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_stop_alarm"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:stateListAnimator="@null"
            android:text="@string/layout_wakeup_btn_stop_alarm"
            android:textStyle="bold"
            app:backgroundTint="@color/color_E46565"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_retry_alarm" />

        <TextView
            android:id="@+id/tv_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/layout_wakeup_notice"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_stop_alarm" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>